--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
-body{
-    background-color: aquamarine;
-    margin: 10%;
+*{
+    margin:0;
 }
-h1{
-    text-align: center;
+html,body{height: 100%;}
+body{
+     background-image: linear-gradient(180deg,rgb(0, 0, 0), rgb(34, 35, 65));
 }
