--- a/estilo.css
+++ b/estilo.css
@@ -8,15 +8,16 @@ body{
 a{
     text-decoration: none;
 }
-.header{
-    background-color: aqua;
+.header > nav{
+    background-color: rgb(255, 255, 255);
     padding-inline:32px;
     height: 8vh;
-}
-.nav{
     display:flex;
     align-items: center;
     justify-content: space-between;
+}
+.nav{
+
 }
 .logo{
 
