--- a/estilo.css
+++ b/estilo.css
@@ -1,33 +1,91 @@
 *{
     margin:0;
+    padding: 0;
 }
-html,body{height: 100%;}
 body{
-     background-image: linear-gradient(180deg,rgb(0, 0, 0), rgb(34, 35, 65));
+    background-color:#ffffff;  
+    background-repeat:no-repeat;
+    display:flex;
+    flex-direction:column;
+    min-height:100vh
+}
+body{
+   background-image: linear-gradient(180deg,rgb(0, 0, 0), rgb(34, 35, 65));
+    /* background:url(fundo.jpg),rgb(0,0,0,0.3); */
+    background-blend-mode: multiply;
+    background-position: center;
+    background-size:cover;
+    background-repeat: no-repeat;
 }
 a{
     text-decoration: none;
 }
-.header > nav{
-    background-color: rgb(255, 255, 255);
-    padding-inline:32px;
-    height: 8vh;
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
+#cadastrotlgd{
+    color: white;
+    text-decoration: none;
+    background-color: blue;
+    border-radius: 30px;
+    transition-property: all;
+    transition-timing-function: ease-in;
+    transition-duration: 0.2s;
+    padding-top:5px;
+    padding-bottom: 5px;
+    padding-left: 17px;
+    padding-right: 17px;
 }
-.nav{
-
+#cadastrotlgd:hover{
+    background-color: rgb(254, 2, 2);
+    color:rgb(255, 255, 255)
 }
 .logo{
-
+    font-size: 24px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
 }
 .lista-nav{
     display:flex;
-    gap: 32px;
-    color: #fff;
     list-style: none;
 }
-.caixaForm{
-    
+.lista-nav li{
+    letter-spacing: 3px;
+    margin-left: 32px;
 }
+.imagensLogCad{
+    border-radius: 90px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    height:620px;
+    width:320px;
+}
+.separadorLogCad{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(0, 0, 0,0.3);
+    margin-left: 10%;
+    margin-right: 10%;
+    border-radius: 90px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+/*  Lembrar de usar =>>  filter: blur(8px);
+    -webkit-filter: blur(8px);
+    */
+
+@media(max-width:991px){
+    .sidebar{
+        background-color: rgba(255, 255, 255, 0.15);
+        backdrop-filter: blur(10px);
+    }
+    .separadorLogCad{
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+}
+@media(max-width:801px){
+    .imagensLogCad{
+        display:none;
+    }
+}
+
