--- a/estilo.css
+++ b/estilo.css
@@ -52,21 +52,28 @@ a{
 }
 .imagensLogCad{
     border-radius: 90px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+
     height:620px;
     width:320px;
 }
-.separadorLogCad{
+.caixaLogCad{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    background-color: rgb(0, 0, 0,0.3);
     margin-left: 10%;
     margin-right: 10%;
-    border-radius: 90px;
     margin-top: 5%;
     margin-bottom: 5%;
+}
+.caixa2LogCad{
+    background-color: rgb(0, 0, 0);
+    height:620px;
+    width:620px;
+    border-radius: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
 }
 
 /*  Lembrar de usar =>>  filter: blur(8px);
